Further changes on code and migrating to JDK11