@@ -9,6 +9,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,7 +29,7 @@ public class RoomService {
                 .findAll()
                 .stream()
                 .map(this.roomMapper::mapRoomToDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional
